Update README and add testing script.

--- a/example-copilot/pyproject.toml
+++ b/example-copilot/pyproject.toml
@@ -13,6 +13,7 @@ langchain-community = "^0.0.16"
 langchain-openai = "^0.0.5"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
+httpx = "^0.26.0"
 
 
 [tool.poetry.group.development.dependencies]
