--- a/mistral-copilot/pyproject.toml
+++ b/mistral-copilot/pyproject.toml
@@ -11,9 +11,9 @@ fastapi = "^0.109.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
-magentic = "0.21"
+magentic = {extras = ["anthropic", "litellm"], version = "^0.24.0"}
 litellm = "^1.34.39"
-openai = "1.23.6"
+openai = "^1.30.1"
 
 
 [tool.poetry.group.development.dependencies]
