--- a/example-copilot/pyproject.toml
+++ b/example-copilot/pyproject.toml
@@ -8,16 +8,17 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.109.0"
-langchain = "^0.1.4"
-langchain-community = "^0.0.16"
-langchain-openai = "^0.0.5"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
+sse-starlette = "^2.1.2"
+magentic = "^0.28.0"
 
 
 [tool.poetry.group.development.dependencies]
 ruff = "^0.1.15"
+pytest = "^8.3.1"
+pytest-asyncio = "^0.23.8"
 
 [build-system]
 requires = ["poetry-core"]
