Add tests + bump magentic

--- a/mistral-copilot/pyproject.toml
+++ b/mistral-copilot/pyproject.toml
@@ -11,7 +11,7 @@ fastapi = "^0.109.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
-magentic = {extras = ["litellm"], version = "^0.28.0"}
+magentic = "^0.28.1"
 openai = "^1.37.0"
 sse-starlette = "^2.1.2"
 
