--- a/mistral-copilot/pyproject.toml
+++ b/mistral-copilot/pyproject.toml
@@ -7,13 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.109.0"
+fastapi = "^0.111.1"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
 magentic = {extras = ["anthropic", "litellm"], version = "^0.24.0"}
 litellm = "^1.34.39"
 openai = "^1.30.1"
+idna = "^3.7"
 
 
 [tool.poetry.group.development.dependencies]
