--- a/llama31-local-copilot/pyproject.toml
+++ b/llama31-local-copilot/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -12,7 +13,9 @@ uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
 sse-starlette = "^2.1.2"
-magentic = {extras = ["litellm"], version = "^0.28.0"}
+magentic = {extras = ["litellm"], version = "^0.32.0"}
+litellm = "^1.48.19"
+aiohttp = "^3.10.9"
 
 
 [tool.poetry.group.development.dependencies]
