--- a/mistral-copilot/pyproject.toml
+++ b/mistral-copilot/pyproject.toml
@@ -19,8 +19,9 @@ sse-starlette = "^2.1.2"
 
 
 [tool.poetry.group.development.dependencies]
-ruff = "^0.1.15"
-
+ruff = "^0.6.9"
+pytest = "^8.3.1"
+pytest-asyncio = "^0.23.8"
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.22.2"
