--- a/llama31-local-copilot/pyproject.toml
+++ b/llama31-local-copilot/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.109.0"
+fastapi = "^0.115.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
@@ -16,6 +16,7 @@ sse-starlette = "^2.1.2"
 magentic = {extras = ["litellm"], version = "^0.32.0"}
 litellm = "^1.48.19"
 aiohttp = "^3.10.9"
+starlette = "0.40.0"
 
 
 [tool.poetry.group.development.dependencies]
