--- a/example-copilot/pyproject.toml
+++ b/example-copilot/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.109.0"
+fastapi = "^0.115.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
 sse-starlette = "^2.1.2"
 magentic = "^0.28.0"
+starlette = "0.40.0"
 
 
 [tool.poetry.group.development.dependencies]
