--- a/mistral-copilot/pyproject.toml
+++ b/mistral-copilot/pyproject.toml
@@ -8,7 +8,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.111.1"
+fastapi = "^0.115.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
 httpx = "^0.26.0"
@@ -18,6 +18,7 @@ litellm = "^1.48.19"
 openai = "^1.37.0"
 sse-starlette = "^2.1.2"
 aiohttp = "^3.10.9"
+starlette = "0.40.0"
 
 
 [tool.poetry.group.development.dependencies]
