--- a/example-copilot/pyproject.toml
+++ b/example-copilot/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Michael Struwig <michael.struwig@openbb.finance>"]
 readme = "README.md"
-
+package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.0"
