--- a/example-copilot/pyproject.toml
+++ b/example-copilot/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 package-mode = false
 [tool.poetry.dependencies]
 python = "^3.10"
+common = { path = "../common" }
 fastapi = "^0.115.0"
 uvicorn = "^0.27.0.post1"
 python-dotenv = "^1.0.1"
